# eos-app-manager

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  git.mk
data/: 65eam_paths_update  65eam_xdg_data_dirs_update  Makefile.am  com.Endless.AppManager.conf.in  com.Endless.AppManager.service.in  com.endlessm.AppManager.conf.in  com.endlessm.AppManager.service.in  com.endlessm.app-installer.policy  com.endlessm.app-installer.rules  com.endlessm.app-installer.rules.in  eam-dbus-interface.xml  eam-default.cfg  eam-default.cfg.in  eam-service-interface.xml  eam-transaction-interface.xml  eam.gresource.xml  eos-app-manager-migrate-bundles.service.in  eos-app-manager.conf  eos-app-manager.ini.in  eos-app-manager.service.in
debian/: changelog  control  copyright  eos-app-manager.dirs  eos-app-manager.manpages  postinst  rules
debian/docs/: eam.8
doc/: design.rst  packagekit-interface.txt
po/: Makevars  POTFILES.in
scripts/: Makefile.am  config.sh  install-config.sh  utils.sh
scripts/install/: 01-extract.sh  02-symlinks.sh  03-desktop-updates.sh  04-cleanup.sh
scripts/install/rollback/: 01-delete-symlinks.sh  02-cleanup.sh  03-desktop-updates.sh
scripts/install/run/: 01-extract.sh  02-symlinks.sh  03-desktop-updates.sh  04-cleanup.sh  05-directories.sh  10-extract.sh  20-external.sh  30-custom-installer.sh  30-install.sh  40-cleanup-external.sh  40-install.sh  40-symlinks.sh  50-install.sh  50-symlinks.sh  60-cleanup.sh  60-desktop-updates.sh  60-symlinks.sh  70-cleanup.sh  70-desktop-updates.sh  70-python-compile.sh  80-cleanup.sh
scripts/install_rollback/: 01-delete-symlinks.sh  02-cleanup.sh  03-desktop-updates.sh
scripts/uninstall/: 00-directories.sh  01-delete-symlinks.sh  01-existence-check.sh  02-delete-symlinks.sh  03-delete-installation-dir.sh  04-desktop-updates.sh
scripts/update/full/: 01-extract.sh  02-delete-symlinks.sh  03-move-out-installation-dir.sh  04-move-update-to-prefix.sh  05-symlinks.sh  06-desktop-updates.sh  07-cleanup.sh  10-extract.sh  15-external.sh  20-custom-installer.sh  25-cleanup-external.sh  30-delete-symlinks.sh  35-move-out-installation-dir.sh  40-move-update-to-prefix.sh  45-symlinks.sh  50-desktop-updates.sh  50-python-compile.sh  55-cleanup.sh
scripts/update/full_update/: 01-extract.sh  06-desktop-updates.sh
scripts/update/rollback/: 00-directories.sh  01-delete-symlinks.sh  02-move-back-installation-dir.sh  03-regenerate-symlinks.sh  03-symlinks.sh  04-desktop-updates.sh  04-python-compile.sh  05-cleanup-downloads.sh  05-cleanup.sh
scripts/update/xdelta/: 10-verify-downloads.sh  15-python-cleanup.sh  20-apply-xdelta.sh  20-backup.sh  40-apply-xdelta.sh  50-symlinks.sh  60-python-compile.sh  70-cleanup.sh
src/: Makefile.am  eam-config.c  eam-config.h  eam-dbus-server.c  eam-dbus-server.h  eam-dbus-utils.c  eam-dbus-utils.h  eam-error.c  eam-error.h  eam-fs-sanity.c  eam-fs-sanity.h  eam-fs-utils.c  eam-fs-utils.h  eam-fs.c  eam-install.c  eam-install.h  eam-list-avail.c  eam-list-avail.h  eam-log.c  eam-log.h  eam-os.c  eam-os.h  eam-pkg.c  eam-pkg.h  eam-pkgdb.c  eam-pkgdb.h  eam-refresh.c  eam-refresh.h  eam-rest.c  eam-rest.h  eam-service.c  eam-service.h  eam-spawner.c  eam-spawner.h  eam-transaction-dbus.c  eam-transaction-dbus.h  eam-transaction.c  eam-transaction.h  eam-uninstall.c  eam-uninstall.h  (+17 more)
tests/: Makefile.am  cfg.c  pkg.c  rest.c  scripts-install.c  scripts.c  spawner.c  updates.c  version.c  wclient.c
tests/appdir/app01/: .info
tests/appdir/com.application.id1/: .info
tests/appdir/com.application.id2/: .info
tests/data/: available.json  dummy.pub  link-db.json  test-app.asc  test-app.sha256  update-db.json
tests/scriptdir/: .hidden  README  script2  script3
tools/: .gitignore  Makefile.am  bundle2server.py  bundler-tool.sh  dbus-client.sh  deb2bundle.py  deb2bundle.sh  eam-command-app-info.c  eam-command-config.c  eam-command-create-symlinks.c  eam-command-ensure-symlink-farm.c  eam-command-help.c  eam-command-init-fs.c  eam-command-install.c  eam-command-list-apps.c  eam-command-migrate.c  eam-command-uninstall.c  eam-command-update.c  eam-command-version.c  eam-commands.c  eam-commands.h  eam.c  eos-select-app-server  eos-select-app-server.in  missing-deps.py  wclient.c
tools/completion/: eam  eamctl
